[package]
name = "vboxhelper"
version = "0.1.0"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
categories = [ "api-bindings", "parsing" ]
keywords = [ "vbox", "virtualbox", "helper" ]
repository = "https://github.com/openqrnch/vboxhelper"
description = "API on top of VirtualBox's command line tools."
exclude = [ "rustfmt.toml", "examples" ]

[dependencies]
eui48 = { version = "1" }
regex = { version = "1" }
uuid = { version = "0.8" }
